--- a/customer_console.conf
+++ b/customer_console.conf
@@ -61,6 +61,14 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/(m/)?au/products/?$ http://%{HTTP:X-Forwarded-Host}/products [R=301,L]
   
+  # /au/m editorials => http://westfield.com.au; /au/ => http://westfield.com.au
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/au/m/centres/au/editorials/.* http://%{HTTP:X-Forwarded-Host}/ [R=301,L]
+  
+  # /au/m centre editorials => http://westfield.com.au; /au/ => http://westfield.com.au
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/au/m/centres/(.*)/editorials/?$ http://%{HTTP:X-Forwarded-Host}/ [R=301,L]
+  
   # /au/centres => http://westfield.com.au/
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/au/westfield-centres/?$ http://%{HTTP:X-Forwarded-Host}/ [R=301,L]
