--- a/customer_console.conf
+++ b/customer_console.conf
@@ -226,6 +226,11 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/au/help/.* http://%{HTTP:X-Forwarded-Host}/ [R=301,L]
 
+  # Gifts - Redirect base gifts to national product
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/au/gifts/?$ http://%{HTTP:X-Forwarded-Host}/products/ [R=301,L]
+
   # Gifts - Redirect all gifts to national product
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
