--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "jquery": "1.10.1",
     "enquire": "~2.0.2",
     "isotope": "~1.5.25",
-    "matchmedia": "latest",
+    "matchmedia": "3c67d9bfb525b1b0549448aa27769a289ba5be98",
     "flexslider": "latest",
     "html5shiv": "~3.6.2",
     "prism": "gh-pages",
