WSF-6220 - Add redirect for flatlay the nation

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -248,27 +248,27 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/giftcards?/?$ https://www.westfieldgiftcards.com.au/Online [R=301,L]
 
-  # OPS-7735, OPS-7737
-  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
-  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
-  RewriteRule ^/au/assets/pdfs/competitions/westfield-christmas-happy-giving-tcs-141113.pdf$ http://res.cloudinary.com/wlabs/image/upload/v1384840726/zwro6xviegpbslcvoasf.pdf [R=301,L]
-
-# [2013-11-28 gcallister] Add redirects for wifi Carindale
-  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
+  # [2014-02-04 gcallister] Extend redirects for wifi Carindale
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20150201
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/carindale/wifi/?$ http://www.westfieldfreewifi.com/carindale/ [R=301,L]
 
-# [2013-11-28 gcallister] Add redirects for wifi Sydney
-  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
+  # [2014-02-04 gcallister] Extend redirects for wifi Sydney
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20150201
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/sydney/wifi/?$ http://www.westfieldfreewifi.com/sydney/ [R=301,L]
 
-# [2013-11-28 gcallister] Add redirects for wifi Geelong
-  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140201
+  # [2014-02-04 gcallister] Extend redirects for wifi Geelong
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20150201
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/geelong/wifi/?$ http://%{HTTP:X-Forwarded-Host}/geelong/ [R=301,L]
 
-# [2013-12-3 csmith] Redirect incorrect movie urls to the correct one, eg bondijunction/bondijunction/movies/the-butler/279 -> bondijunction/movies/the-butler/279
+  # [2014-02-04 gcallister] Add Flatlay The Nation (WSF-6220)
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140701
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/flatlay/?$ http://flatlay.westfield.com.au [R=301,L]
+
+  # [2013-12-3 csmith] Redirect incorrect movie urls to the correct one, eg bondijunction/bondijunction/movies/the-butler/279 -> bondijunction/movies/the-butler/279
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/(.+?)/(.+?)/movies/(.+?)/(.+?)$ http://%{HTTP:X-Forwarded-Host}/$1/movies/$3/$4 [R=301,L]
 
